--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="src/style.css"/>
 </head>
 <body>
-    
+    <header>
+        <div id="title">
+            <h1>Marketing</h1>
+            <h1>Criativo</h1>
+        </div>
+        <ul>
+            <a href="#"><li>Inicio</li></a>
+            <a href="#"><li>Serviços</li></a>
+            <a href="#"><li>Sobre</li></a>
+            <a href="#"><li>Contato</li></a>
+            <a href="#"><li>Já tem uma conta?</li></a>
+        </ul>
+    </header>
 </body>
 </html>
