--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de Carros</title>
     <link rel="stylesheet" href="src/style.css"/>
+    <link rel="stylesheet" href="src/fonts.css">
+    <title>Site de Carros</title>
+    
 </head>
 <body>
     <header>
@@ -33,7 +35,7 @@
             </form>
         </aside>
         <article>
-            
+            <img src="img/Logo.png" alt="IlOGO inicial">
         </article>
     </main>
 
