--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <aside>
-            <h2>Inscreva-se agora</h2>
+            <h2 ><span>Inscreva-se agora</span></h2>
             <h2>na Newslatter</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti placeat aliquid tempora beatae quisquam culpa temporibus delectus! Architecto non culpa vitae ad maiores saepe ducimus.</p>
